Bug#44224 - In 2 out of 60 RQG test runs, Falcon crashed on this line; Table::fetchNext   at Table.cpp:603 if ((record = records->fetch(bitNumber))) Should be this; if (records && (record = records->fetch(bitNumber)))